# document_exchange_zima_leto

clientside/: Dockerfile  pyproject.toml
clientside/client/: main.py  models.py  transaction_generator.py  utils.py
transaction_unit/: Dockerfile  pyproject.toml
transaction_unit/transaction_unit/: main.py  utils.py
